# nnwcli

./: CMakeLists.txt  LICENSE.txt  README.md
include/: argument.hpp  argument_types.hpp  command.hpp  command_executor.hpp  context.hpp  custom_type.hpp  custom_type_registry.hpp  globals.hpp  nnwcli.hpp
include/builtin/: help.hpp  helpof.hpp
include/parser/: abstract_parser.hpp  argline_parser.hpp  placeholder_parser.hpp
include/util/: string_case.hpp  utf8.hpp
src/: CMakeLists.txt  argument_types.cpp  command.cpp  command_executor.cpp  context.cpp  main.cpp
src/parser/: abstract_parser.cpp  argline_parser.cpp  placeholder_parser.cpp
src/util/: string_case.cpp  utf8.cpp
